templates/debug.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: debug
spec:
  crd:
    spec:
      names:
        kind: Debug
      validation:
        openAPIV3Schema:
          properties:
            locations:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package debug

        violation[{"msg": msg}] {
          msg := sprintf("REVIEW OBJECT: %v", [input])
        }
