templates/storage-bucket-allowed-locations.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: storagebucketallowedlocations
spec:
  crd:
    spec:
      names:
        kind: StorageBucketAllowedLocations
      validation:
        openAPIV3Schema:
          properties:
            locations:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package storagebucketallowedlocations

        # Check if the location was set on the storage bucket resource.
        #
        # A storage bucket location must be set.
        violation[{"msg": msg, "details": {"location": ""}}] {
            not input.review.object.spec.location
            msg := "missing location"
        }

        # Check if the storage bucket location is on the allowed list.
        #
        # Storage buckets can only be created in allowed locations as
        # defined by the locations parameter.
        violation[{"msg": msg, "details": {"location": location}}] {
            location := input.review.object.spec.location
            allowed_locations := input.parameters.locations

            # We can't use a simple set look up here:
            #
            #    not allowed_locations[location]
            #
            # because allowed_locations points to input.parameters.locations
            # which was defined outside of this policy.
            not contains(allowed_locations, location)

            msg := sprintf("%v location not allowed", [location])
        }

        # Check if variable s is a set containing variable e
        # 
        # Returns true if s contains e.
        contains(s, e) {
            s[_] = e
        }
